--- a/.github/workflows/cron-run.yml
+++ b/.github/workflows/cron-run.yml
@@ -19,8 +19,8 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install dependencies (safe for GitHub Actions without lockfile)
+        run: npm install --no-audit --no-fund
 
       - name: Install Playwright browsers
         run: npx playwright install --with-deps
