--- a/.github/workflows/cron-run.yml
+++ b/.github/workflows/cron-run.yml
@@ -1,5 +1,9 @@
 name: JobBot scheduled run
 
+# ensure the workflow has write permission to push files
+permissions:
+  contents: write
+
 on:
   schedule:
     - cron: '0 */6 * * *'   # every 6 hours — change as needed
@@ -9,10 +13,12 @@ jobs:
   run-jobbot:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout (with token preserved)
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
+          persist-credentials: true
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
