--- a/.github/workflows/telegram-poller.yml
+++ b/.github/workflows/telegram-poller.yml
@@ -2,7 +2,7 @@ name: Telegram Poller
 
 on:
   schedule:
-    - cron: "*/5 * * * *"   # every 5 minutes
+    - cron: "*/5 * * * *"   # run every 5 minutes
   workflow_dispatch:
 
 jobs:
@@ -20,10 +20,13 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: '20'
 
-      - name: Install dependencies
-        run: npm ci --no-audit --no-fund
+      - name: Install dependencies (safe)
+        run: |
+          # Always use npm install in CI to avoid package-lock mismatch errors
+          echo "Running npm install (safe fallback)"
+          npm install --no-audit --no-fund
 
       - name: Run Telegram poller
         env:
