--- a/.github/workflows/tailor-resume-manual.yml
+++ b/.github/workflows/tailor-resume-manual.yml
@@ -1,4 +1,4 @@
-name: Tailor Resume (manual ready)
+name: Tailor Resume (manual)
 
 on:
   workflow_dispatch:
@@ -27,7 +27,7 @@ on:
 jobs:
   tailor:
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    timeout-minutes: 45
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -37,8 +37,11 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Install dependencies (ci, fallback to install)
+        run: |
+          set -e
+          echo "Trying npm ci (preferred)..."
+          npm ci || (echo "npm ci failed — running npm install" && npm install --no-audit --no-fund)
 
       - name: Run Tailor Resume script
         env:
